# rocket-gatewaynode-com

./: .gitignore  Cargo.toml  README.md  robots.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs  models.rs  n4_draft.rs  schema.rs
static/css/: comments.css  main.css
steps/one/: base.tera  main.rs
templates/: 404.tera  a_post.tera  all_links.tera  all_posts.tera  base.tera  code-1.tera  export.tera  fiction.tera  front.tera  robots.tera  rustlings.tera  shells.tera  sitemap.tera  snakes.tera  testing-dynamic.tera  testing-single.tera  testing.tera
