[package]
name = "rocket-gatewaynode-com"
version = "0.1.0"
authors = ["John P. Warren <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0.105"
serde_derive = "1.0.105"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
tera = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates", "serve"]
