[package]
name = "rocket-gatewaynode-com"
version = "0.1.0"
authors = ["Gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.115"
serde_derive = "1.0.115"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
tera = "1.5.0"
chrono = { version = "0.4.15", features = ["serde"] }
rocket_cors = "0.5.2"
dirs = "3.0.1"
markdown = "0.3.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve"]
